--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 HOST = localhost
-USERNAME = root
-PASSWORD = 
+USER = root
+PASSWORD =   
 PORT = 3306
 DATABASE = login-reg
+SESSION_SECRET = averysecretkey
